# swarm_control

./: CMakeLists.txt  boids.js  package.xml  swarm_control.rviz
include/: ConversorNode.h  SwarmControllerNode.h  UavControllerNode.h
launch/: apm_config.yaml  mavros_swarm.launch  web_gcs.launch
msg/: OdometryWithUavId.msg  UavPosition.msg  UavPositionArray.msg
src/: ConversorNode.cpp  SwarmControllerNode.cpp  UavControllerNode.cpp  conversor_node.cpp  uav_control_node.cpp
urdf/: quadrotor.urdf.xacro  quadrotor_base.urdf.xacro
